Corrected alignment settings, added options and sections

--- a/css/editor.css
+++ b/css/editor.css
@@ -1,3 +1,22 @@
+@media print {
+	.no-print, .no-print * { display: none !important; }
+	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 { float: left; }
+	.col-sm-12 { width: 100%; }
+	.col-sm-11 { width: 91.66666667%; }
+	.col-sm-10 { width: 83.33333333%; }
+	.col-sm-9 { width: 75%; }
+	.col-sm-8 { width: 66.66666667%; }
+	.col-sm-7 { width: 58.33333333%; }
+	.col-sm-6 { width: 50%; }
+	.col-sm-5 { width: 41.66666667%; }
+	.col-sm-4 { width: 33.33333333%; }
+	.col-sm-3 { width: 25%; }
+	.col-sm-2 { width: 16.66666667%; }
+	.col-sm-1 { width: 8.33333333%; }
+}
+
+
+
 body {
 	background-color: #555;
 	line-height: 1.4em;
@@ -31,10 +50,16 @@ body {
 	line-height: 1em;
 }
 #left * {
-	color: #ddd;
+	color: #eee;
 }
 #left h3 , #left h4 {
 	color: #fff;
+}
+#left .btn {
+	color: #fff;
+}
+#left .btn.btn-default {
+	color: #666;
 }
 
 
@@ -44,35 +69,39 @@ body {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+#customTemplateOptions {
+	display: none;
+}
 .toggle-button {
 	display: inline-block;
 	float: right;
 }
 .toggle-option {
 	display: inline-block;
-	padding: 2px;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding: 3px;
+	padding-left: 8px;
+	padding-right: 8px;
 	cursor: pointer;
+	border-radius: 2px;
 }
 .toggle-option {
-	background-color: #333;
+	background-color: #222;
 }
 .toggle-option.selected {
-	background-color: green;
+	/* background-color: #27AE60; */
+	/* background-color: #5cb85c; */
+	background-color: #E74C3C;
 }
-
-
 
 
 
 #page {
 	/* width: 794px; */
-	width: 21cm;
 	/* height: 29.7cm; */
+	width: 21cm;
 	background-color: white;
 	margin: 1% auto 1% auto;
-	padding: 0% 1.5% 1% 1.5%;
+	padding: 0.2cm 1.3cm 1cm 1.3cm;
 	box-shadow: 0px 0px 20px 0px #000;
 	text-align: left;
 }
@@ -85,16 +114,89 @@ body {
 	margin-top: 2px; margin-bottom: 3px;
 }
 
+a {
+	color: #666;
+}
+ul {
+	margin-left: 20px;
+	padding-left: 20px;
+}
+li {
+	margin-top: 1%;
+}
+ul.nobullet {
+	list-style: none;
+}
+.star {
+	margin-top: 5px;
+}
+.light {
+	font-weight: 300;
+}
+.grey {
+	color: #666;
+}
+.borderless { margin-bottom: 0; }
+.half {
+	display: inline-block;
+	width: 49.5%;
+}
+.left {
+	float: left;
+}
+.right {
+	float: right;
+}
+.tab {
+	margin-left: 10px;
+}
+
+
 #image_box {
 	float: left;
-	margin-top: 35px;
+	margin-top: 25px;
 	margin-left: 5px;
 	margin-right: 15px;
 }
-
+#info {
+	margin-bottom: 0px;
+	margin-top: auto;
+}
 #contact {
-	margin-top: 25px;
+	position: absolute;
+	bottom: 0;
+	right: 20px;
 	text-align: right;
+}
+#contentMinor , #contentBranch , #contactLink2 {
+	display: none;
+}
+
+
+.table tbody tr td, .table tbody tr th, .table thead tr th {
+	border: none;
+	padding: 0;
+	font-size: 13.71px;
+}
+td {
+	color: #444;
+}
+td.header {
+	color: #333;
+}
+.table.customBordered , .table.customBordered * {
+	border: 0px;
+}
+.table.customBordered {
+	border-top: 1px solid #999;
+	border-left: 1px solid #999;
+}
+.table.customBordered tr {
+	border-bottom: 1px solid #999;
+}
+.table.customBordered tr td {
+	padding: 0px 5px 0px 5px;
+	border-right: 1px solid #999;
 }
 
 
@@ -134,36 +236,7 @@ body {
 }
 
 
-.table tbody tr td, .table tbody tr th, .table thead tr th {
-	border: none;
-	padding: 0;
-	font-size: 13.71px;
-}
-td {
-	color:#444;
-}
-td.header {
-	color:#333;
-}
-
-.table.customBordered , .table.customBordered * {
-	border: 0px;
-}
-.table.customBordered {
-	border-top: 1px solid #999;
-	border-left: 1px solid #999;
-}
-.table.customBordered tr {
-	border-bottom: 1px solid #999;
-}
-.table.customBordered tr td {
-	padding: 0px 5px 0px 5px;
-	border-right: 1px solid #999;
-}
-
-
 .text {
-	/*font-weight:300;*/
 	color: #444;
 	font-size: 0.98em;
 }
@@ -173,13 +246,13 @@ td.header {
 	margin-right: 1px;
 }
 .mentor {
-	font-weight:300;
+	font-weight: 300;
 	font-style: italic;
 }
 .link {
-	color:#666;
+	color: #666;
 	margin-left: 30px;
-	font-weight:300;
+	font-weight: 300;
 	font-style: italic;
 	margin-right: 1px;
 }
@@ -189,108 +262,56 @@ td.header {
 #sectionSkills li , #sectionCourses li {
 	margin-top: 0.5%;
 }
-
-a {
-	color: #666;
-}
-ul {
-	margin-left: 20px;
-	padding-left: 20px;
-}
-li {
-	margin-top: 1%;
-}
-ul.nobullet {
-	list-style: none;
-}
-.star {
-	margin-top: 5px;
-}
-
-
-.light {
-	font-weight:300;
-}
-.grey {
-	color: #666;
-}
-.borderless { margin-bottom: 0; }
-.half {
+#sectionExperience .title , #sectionExperience .time {
 	display: inline-block;
-	width: 49.5%;
 }
-.left {
-	float: left;
+#sectionPublications .title , #sectionPublications .time {
+	display: inline-block;
 }
-.right {
-	float: right;
+#sectionProjects .title , #sectionProjects .time {
+	display: inline-block;
 }
-.tab {
-	margin-left: 10px;
+#sectionInterest {
+	display: none;
 }
 
 
-#page.serif {
+
+#page.verdana * {
+	font-family: "Verdana", serif;
+}
+#page.droid * {
 	font-family: 'Droid Serif', serif;
 }
-#page.sans {
+#page.roboto * {
 	font-family: 'Roboto', sans-serif;
 }
-.serif strong {
+.droid strong {
 	font-weight: 700;
 }
-.sans strong {
+.roboto strong {
 	font-weight: 500;
 }
-.serif .title {
+.droid .title {
 	font-weight: 700;
 }
-.sans .title {
+.roboto .title {
 	font-weight: 500;
 }
 
 
-@media print {
-	.no-print, .no-print * {
-		display: none !important;
-	}
-	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-		float: left;
-	}
-	.col-sm-12 {
-		width: 100%;
-	}
-	.col-sm-11 {
-		width: 91.66666667%;
-	}
-	.col-sm-10 {
-		width: 83.33333333%;
-	}
-	.col-sm-9 {
-		width: 75%;
-	}
-	.col-sm-8 {
-		width: 66.66666667%;
-	}
-	.col-sm-7 {
-		width: 58.33333333%;
-	}
-	.col-sm-6 {
-		width: 50%;
-	}
-	.col-sm-5 {
-		width: 41.66666667%;
-	}
-	.col-sm-4 {
-		width: 33.33333333%;
-	}
-	.col-sm-3 {
-		width: 25%;
-	}
-	.col-sm-2 {
-		width: 16.66666667%;
-	}
-	.col-sm-1 {
-		width: 8.33333333%;
-	}
+::-webkit-scrollbar {
+	width: 8px;
+}
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px hsla(0,0%,0%,0.3);
+	border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	 background-color: hsla(0,0%,100%,0.5);
+	-webkit-box-shadow: inset 0 0 6px hsla(0,0%,100%,1);
+}
+::-webkit-scrollbar-thumb:hover {
+	background-color: hsla(0,0%,100%,0.7);
 }
